[gd_scene load_steps=19 format=3 uid="uid://cubcpudwm2epv"]

[ext_resource type="Material" uid="uid://806pw1w3og6q" path="res://Assets/Shaders/screen_shader.tres" id="1_d7q3r"]
[ext_resource type="Script" path="res://Scripts/Screens/tutorial.gd" id="1_ua4od"]
[ext_resource type="Texture2D" uid="uid://codlodhonc1gr" path="res://Assets/WindowBorder/Window_Header.png" id="2_73x7j"]
[ext_resource type="Texture2D" uid="uid://ra37oyj5pmyi" path="res://Assets/Icons/close.tres" id="3_uefcv"]
[ext_resource type="Texture2D" uid="uid://dowcimj8xqtpi" path="res://Assets/Icons/minimize.tres" id="4_vnmym"]
[ext_resource type="Texture2D" uid="uid://kklcn6pm1w4w" path="res://Assets/Icons/maximize.tres" id="5_y1b6u"]
[ext_resource type="Texture2D" uid="uid://3mrxu3vwjovp" path="res://Assets/WindowBorder/Teal_Title_Bar.png" id="6_eo2rn"]
[ext_resource type="Texture2D" uid="uid://b0qhusj8oauym" path="res://Assets/WindowBorder/Lilac_Title_Bar.png" id="7_x7to0"]
[ext_resource type="Texture2D" uid="uid://c4imvdgrdyp4n" path="res://Assets/WindowBorder/Green_Title_Bar.png" id="8_obeax"]
[ext_resource type="Texture2D" uid="uid://h88v7k7hsdrg" path="res://Assets/Icons/icons-set-1_0000s_0049_Layer-141.png" id="9_oao26"]
[ext_resource type="Texture2D" uid="uid://cp5iw76uqsbu6" path="res://Assets/Icons/Followers.png" id="10_hv7r1"]
[ext_resource type="Texture2D" uid="uid://tqab53wimuws" path="res://Assets/Icons/icons-set-1_0000s_0007_Layer-99.png" id="11_8qnkp"]
[ext_resource type="Texture2D" uid="uid://h7w605384e5g" path="res://Assets/WindowBorder/Orange_Title_Bar.png" id="12_afbp5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mdcgg"]
texture = ExtResource("2_73x7j")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dwt1r"]
texture = ExtResource("6_eo2rn")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_83kfh"]
texture = ExtResource("7_x7to0")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a8o26"]
texture = ExtResource("8_obeax")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8e3ak"]
texture = ExtResource("12_afbp5")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ua4od")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
z_index = 6
material = ExtResource("1_d7q3r")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Background"]
layout_mode = 2

[node name="WindowToolBar" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mdcgg")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Background/VBoxContainer/WindowToolBar"]
layout_mode = 2

[node name="Close" type="Button" parent="CanvasLayer/Background/VBoxContainer/WindowToolBar/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_uefcv")

[node name="Minimize" type="Button" parent="CanvasLayer/Background/VBoxContainer/WindowToolBar/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_vnmym")

[node name="Maximize" type="Button" parent="CanvasLayer/Background/VBoxContainer/WindowToolBar/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_y1b6u")

[node name="ToolBar" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Background/VBoxContainer/ToolBar"]
layout_mode = 2

[node name="Home" type="Button" parent="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer"]
layout_mode = 2
text = "Home"
expand_icon = true

[node name="Save" type="Button" parent="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Settings" type="Button" parent="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Help" type="Button" parent="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer"]
layout_mode = 2
text = "Help"

[node name="Day" type="Label" parent="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "Day 1"

[node name="MainArea" type="HBoxContainer" parent="CanvasLayer/Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InteractiveZone" type="VBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="PostSpace" type="VBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone"]
layout_mode = 2
size_flags_vertical = 3

[node name="PostSpaceTitle" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dwt1r")

[node name="Label" type="Label" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace/PostSpaceTitle"]
layout_mode = 2
text = "Post Space"
horizontal_alignment = 1

[node name="PostSpaceBody" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"BackgroundPanel"

[node name="PostOrder" type="HBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace/PostSpaceBody"]
unique_name_in_owner = true
layout_mode = 2

[node name="Post1" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace/PostSpaceBody/PostOrder"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="Post2" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace/PostSpaceBody/PostOrder"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="Post3" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace/PostSpaceBody/PostOrder"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="Post4" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace/PostSpaceBody/PostOrder"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="Post5" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace/PostSpaceBody/PostOrder"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="PostSelection" type="VBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone"]
layout_mode = 2
size_flags_vertical = 3

[node name="PostSelectionTitle" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_83kfh")

[node name="Label" type="Label" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionTitle"]
layout_mode = 2
text = "Post Selection"
horizontal_alignment = 1

[node name="PostSelectionBody" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"BackgroundPanel"

[node name="PostSelection" type="HBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody"]
unique_name_in_owner = true
layout_mode = 2

[node name="Redraw" type="Button" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody/PostSelection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = " Redraw"

[node name="Post1" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody/PostSelection"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="Post2" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody/PostSelection"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="Post3" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody/PostSelection"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="Post!" type="Button" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody/PostSelection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = " Post! "

[node name="DataSideBar" type="VBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Resources" type="VBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResourcesTitle" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_a8o26")

[node name="Label" type="Label" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesTitle"]
layout_mode = 2
text = "Resources"
horizontal_alignment = 1

[node name="ResourcesBody" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"EmptyPanel"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 2

[node name="Money" type="TextureRect" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("9_oao26")
expand_mode = 2
stretch_mode = 4

[node name="MoneyAmount" type="Label" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "1.00"

[node name="Followers" type="TextureRect" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("10_hv7r1")
expand_mode = 2
stretch_mode = 4

[node name="FollowersAmounts" type="Label" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "1"

[node name="Sponsors" type="TextureRect" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("11_8qnkp")
expand_mode = 2
stretch_mode = 4

[node name="SponsorsAmounts" type="Label" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "0"

[node name="Passives" type="VBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar"]
layout_mode = 2
size_flags_vertical = 3

[node name="PassivesTitle" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8e3ak")

[node name="Label" type="Label" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesTitle"]
layout_mode = 2
text = "Permanents"
horizontal_alignment = 1

[node name="PassivesBody" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"EmptyPanel"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody"]
layout_mode = 2
columns = 3

[node name="Permanent1" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent2" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent3" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent4" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent5" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent6" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent7" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent8" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent9" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
